mdapioutput/objects/VisitDialog_Tabs__mdt.object
<CustomObject>
    <description>Mobile Visit pop-up Tabs Setting</description>
    <fields>
        <fullName>ActivityFieldName_ND__c</fullName>
        <description>1</description>
        <label>ActivityFieldName_ND</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityFieldName_SOS__c</fullName>
        <description>2</description>
        <label>ActivityFieldName_SOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityKPI_ND__c</fullName>
        <description>1</description>
        <label>ActivityKPI_ND</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityKPI_SOS__c</fullName>
        <description>2</description>
        <label>ActivityKPI_SOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityPDLFieldName__c</fullName>
        <label>Activity PDL Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTSPFieldName__c</fullName>
        <label>Activity TSP Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnsNumber__c</fullName>
        <description>Only for dialog screen display type, number of columns to display on the tab</description>
        <inlineHelpText>Only for dialog screen display type, number of columns to display on the tab</inlineHelpText>
        <label>Number of Columns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContentButtonLabel__c</fullName>
        <description>Custom Label used to name the button displaying Content folder</description>
        <label>Content Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentWorkspaceName__c</fullName>
        <label>Content Workspace Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStatus__c</fullName>
        <description>Status that is revelant to current screen</description>
        <inlineHelpText>Status that is revelant to current screen</inlineHelpText>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Confirmed_InProgress</fullName>
                </value>
                <value>
                    <fullName>Realized</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmed_Prepared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DN_AccountFields__c</fullName>
        <label>DN Account Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayType__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dialog Screen</fullName>
                    <default>true</default>
                    <label>Dialog Screen</label>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Record Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentTemplateName__c</fullName>
        <label>Document Template API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActionPlanRecalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Account Action Plans recalculation</description>
        <label>Action Plan Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAuditIR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Image Recognition Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Button Appeared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsContentButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done Button Appeared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGeneratePDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate PDF Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LayoutId__c</fullName>
        <label>Visit Dialog Layout</label>
        <referenceTo>VisitDialog_Layout__mdt</referenceTo>
        <relationshipLabel>Visit Dialog Tabs Settings</relationshipLabel>
        <relationshipName>Visit_Preparation_Tabs_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PDFButtonLabel__c</fullName>
        <label>PDF Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDFParentObject__c</fullName>
        <label>PDF Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDL_AccountFields__c</fullName>
        <label>PDL Account Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabLabel__c</fullName>
        <label>Tab Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabOrder__c</fullName>
        <label>Tab Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isPhoto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPhoto</label>
        <type>Checkbox</type>
    </fields>
    <label>Visit Dialog Tabs Settings</label>
    <pluralLabel>Visit Dialog Tabs Settings</pluralLabel>
</CustomObject>